--- a/assessment.html
+++ b/assessment.html
@@ -2,6 +2,10 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="twitter:card",content="summary">
+    <meta property="og:url",content="https://mocha0622.github.io/assessment/assessment.html">
+    <meta property="og:title",content="あなたのいいところ診断ゲーム">
+    <meta property="og:description",content="N予備校プログラミング入門コースで制作したWebサイトです。">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>あなたのいいところ診断</title>
