--- a/assessment.html
+++ b/assessment.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="N予備校プログラミング入門コースで制作したWebサイトです。">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>あなたのいいところ診断</title>
+    <title>あなたのいいところ診断(mocha0622)</title>
     <link rel="stylesheet" href="assessment.css">
 </head>
 <body>
