--- a/assessment.html
+++ b/assessment.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assessment.css">
 </head>
 <body>
-    <h1>あなたのいいところは？</h1>
+    <h1>あなたのいいところを診断します。</h1>
     <p>あなたの名前を入力してください</p>
     <input id="user-name" type="text" size = "40" maxlength = "20">
     <button id="assessment">診断する</button>
